--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.5",
+    "@react-navigation/stack": "^6.3.15",
     "expo": "~47.0.12",
     "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.4.2",
@@ -17,6 +19,7 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-web": "~0.18.9"
   },
